# memhog

./: .gitignore  README.md  pyproject.toml
.claude/rules/: specification-update.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/design-notes/: README.md
docs/specification/: README.md
docs/specification/client/: README.md
docs/specification/develop/: README.md  architecture.md  cli.md  memory-detection.md  testing.md
scripts/: automerge.sh  check-spec-freshness.sh
src/memhog/: __init__.py  cli.py  collect.py  models.py  parse.py  render.py  report.py
tests/: test_collect.py  test_models.py  test_parse.py  test_render.py  test_report.py  test_spec_freshness.py
