[project]
name = "memhog"
version = "0.1.0"
description = "macOS の実メモリ(物理フットプリント)を食っているプロセスを特定して提示する診断CLI"
authors = [{ name = "hiroaki", email = "h.note.com.1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.scripts]
memhog = "memhog.cli:app"

[tool.poetry]
packages = [{ include = "memhog", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
ruff = ">=0.8.0"
mypy = ">=1.13.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
